<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="dot">.</string>
    <string name="km">.Km</string>
    <string name="wind">Wind</string>
    <string name="zero">0</string>
    <string name="humidity_values">.%</string>
    <string name="todo">TODO</string>
    <string name="humidity">Humidity</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="city_name">Search Your City</string>
    <string name="textview">TextView</string>
    <string name="minus">-</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_theme">Select Theme</string>
    <string name="app_version">App Version</string>
</resources>