<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@id/cityText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sunny_bg" />

    <SearchView
        android:id="@+id/addCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/search_shape"
        android:outlineAmbientShadowColor="@color/black"
        android:searchIcon="@drawable/baseline_search_24"
        app:layout_constraintBottom_toTopOf="@+id/cityText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/dot"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <com.github.matteobattilana.weather.WeatherView
        android:id="@+id/weatherView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/tempLayout"
            android:layout_width="213dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="99dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="308dp"
            android:paddingTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrowImg"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                app:srcCompat="@drawable/arrow_up" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:padding="6dp"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:padding="6dp"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/arrowDownImg"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                app:srcCompat="@drawable/arrow_down" />
        </LinearLayout>



    </com.github.matteobattilana.weather.WeatherView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/progressBarColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detailedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityText">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3333"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/windImg"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/wind"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/black"
                />

            <TextView
                android:id="@+id/wind"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:text="@string/wind"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/windText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/km"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3333"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="@string/dot"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:shadowColor="@color/black"
                android:textColor="@color/white"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="70sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="8dp"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/humidity_values"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/forecast_bg"
        android:elevation="2dp"
        android:visibility="gone"
        app:blurOverlayColor="#10ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/weatherView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecastView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineSpotShadowColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_items" />


</androidx.constraintlayout.widget.ConstraintLayout>